3.test/test-ingress-resource-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-traefik
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /front
        pathType: Prefix
        backend:
          service:
            name: front
            port:
              number: 8080
      - path: /backoffice
        pathType: Prefix
        backend:
          service:
            name: backoffice
            port:
              number: 8080
