3.test/test-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /front
        pathType: Prefix
        backend:
          service:
            name: front
            port:
              number: 8080
      - path: /backoffice
        pathType: Prefix
        backend:
          service:
            name: backoffice
            port:
              number: 8080
